2003-07-05  Thorsten Jordan <thorsten_jordan@gmx.de>
	* ship_corvette.* and related files.
	  - new model.
	* ai.cpp
	  - made destroyer course computation a bit smarter.
	* game.h game.cpp user_interface.cpp
	  - new clouds.
	* submarine_interface.cpp user_interface.cpp
	  - head to course is shown in gauge.
	* angle.h
	  - removed silly operator<,>,<=,>= functions.

2003-07-04  Thorsten Jordan <thorsten_jordan@gmx.de>
	* smoke_stream.* ship.*
	  - made smoke less denser and reduce particle number
	* ship.h ship.cpp
	  - moved ai/smoke_stream related methods to .cpp file to reduce
	    header file dependencies. This should be done everywhere to
	    reduce compile times for developing. Seems ok so far.
	* ai.h ai.cpp
	  - shifted dependencies.

2003-07-03  Thorsten Jordan <thorsten_jordan@gmx.de>
	* menu.h menu.cpp
	  - improved menu design and input
	* model.h model.cpp
	  - faster model drawing using OpenGL features
	* vector2.h vector2.cpp vector3.h vector3.cpp
	  - changed classes to templates.
	* smoke_stream.* ship.*
	  - introduced smoke streams caused by ships (experimental)
	* all over the place
	  - changed text handling to new model
	  - many miscellaneous changes (new clouds test, ...)

2003-07-02  Markus Petermann  <m.petermann@gmx.net>
	* game.cpp: When a ship is sunk the right text is choosed now.
	* submarine_interface.cpp: When a submarine launches a torpedo the
	  right text is choosed now.

2003-06-16  Thorsten Jordan <thorsten_jordan@gmx.de>
	* user_interface, submarine_interface, ship_interface
	  - moved damage related data directly to class submarine
	  - made display_damage_status() in user_interface abstract, moved
	    code to submarine_interface, where it belongs.
	  - introduced icons showing damage status.

2003-06-11  Thorsten Jordan <thorsten_jordan@gmx.de>
	* released version 0.0.10 and updated version number to 0.0.11

2003-06-07  Thorsten Jordan <thorsten_jordan@gmx.de>
	* shifted damage display to own class, some adds.
